- Fixed alignment bug for scrolling to about section - Added Home menu to mobile - Updated Say Hello tiles - Fixed client logo positioning

--- a/public/styles/_collections.scss
+++ b/public/styles/_collections.scss
@@ -57,10 +57,12 @@
 
 // Item Logo
 .item-logo {
-	flex: 1 0 33%;
+	flex: 1 0 50%;
+	max-width: 180px;
 
 	@include media-breakpoint-up(md){
 		flex: 0 0 20%;
+		max-width: none;
 	}
 
 	.item-inner {
@@ -88,7 +90,9 @@
 	$tile-size: 64px;
 
 	a {
-		display: block;
+		display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
 		text-decoration: none;
 		
 		div {
@@ -134,15 +138,18 @@
 	}
 
 	@media (min-width: 414px){
+		
+	}
+
+	@include media-breakpoint-up(md){
+		flex: 0 1 25%;
+		
 		a {
+			justify-content: flex-start;
 			p {
 				text-align: left;
 				font-size: 1em;
 			}
 		}
-	}
-
-	@include media-breakpoint-up(md){
-		flex: 0 1 25%;
 	}
 }
